K8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
        - host: acme.com
          http:
            paths:
              - path: /api/platform
                pathType: Prefix
                backend:
                    service: 
                        name: platform-clusterip-srv
                        port:
                            number: 80
              - path: /api/c/platforms
                pathType: Prefix
                backend:
                    service:
                        name: commands-clusterip-srv
                        port:
                            number: 80
